--- a/minhas_provas.html
+++ b/minhas_provas.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <title>Minhas Provas</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -58,7 +58,7 @@
       <!-- /.header -->
 
       <main class="main row" role="main">
-        <header class="main-header cleafix">
+        <header class="main-header col-sm-12 cleafix">
           <div class="search col-md-6 col-sm-12 pull-right">
             <form action="">
               <div class="input-group">
@@ -80,7 +80,7 @@
         </header>
         <!-- /.main-header -->
 
-        <div class="main-content">
+        <div class="main-content col-sm-12">
           <ul class="tests-list">
             <li class="tests-list-item">
               <div class="info">
