--- a/minhas_provas.html
+++ b/minhas_provas.html
@@ -10,6 +10,8 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <!-- Main styles file -->
     <link rel="stylesheet" href="css/styles.css">
+    <!-- Media queries with adjustments for small screens -->
+    <link rel="stylesheet" href="css/responsive.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -155,14 +157,14 @@
       <!-- /.main -->
 
       <footer class="footer row">
-        <div class="branding col-md-6 col-sm-12">
+        <div class="branding col-md-5 col-sm-12">
           <img src="http://placehold.it/130x45" alt="Brand logo">
           <p class="text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed pellentesque odio, ac finibus odio.
           </p>
         </div>
         <!-- /.branding -->
-        <div class="social col-md-6 col-sm-12">
+        <div class="social col-md-offset-2 col-md-5 col-sm-12">
           <p class="text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           </p>
