--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
         <div class="research-quality">
             <div class="container">
                 <div class="row">
-                    <div class="image col-sm-12 col-md-6">
+                    <div class="image col-sm-offset-1 col-md-offset-0 col-sm-10 col-md-5">
                         <img src="img/research-quality.png" alt="Qualidade na pesquisa">
                     </div>
-                    <div class="content col-sm-12 col-md-6">
+                    <div class="content col-sm-12 col-md-offset-1 col-md-6">
                         <h3>Qualidade na pesquisa</h3>
                         <p>Política de Gestão</p>
 
@@ -133,8 +133,12 @@
         </div><!-- /.research-quality -->
 
         <div class="services-images">
-            <img src="img/services1.jpg" alt="Imagem 1">
-            <img src="img/services2.jpg" alt="Imagem 2">
+            <div class="image">
+                <img src="img/services1.jpg" alt="Imagem 1">
+            </div>
+            <div class="image">
+                <img src="img/services2.jpg" alt="Imagem 2">
+            </div>
         </div><!-- /.services-images -->
 
         <div class="services">
