--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <nav class="navbar navbar-default">
+        <nav id="mainNavBar" class="navbar navbar-default navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-menu">
@@ -133,12 +133,7 @@
         </div><!-- /.research-quality -->
 
         <div class="services-images">
-            <div class="image">
-                <img src="img/services1.jpg" alt="Imagem 1">
-            </div>
-            <div class="image">
-                <img src="img/services2.jpg" alt="Imagem 2">
-            </div>
+            <div class="image"></div>
         </div><!-- /.services-images -->
 
         <div class="services">
