--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
-    <body>
+    <body data-spy="scroll" data-target="#mainNavBar">
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -37,11 +37,11 @@
                 </div>
                 <div class="collapse navbar-collapse" id="main-menu">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Quem somos</a></li>
-                        <li><a href="#">Fazemos</a></li>
+                        <li><a href="#quemSomos">Quem somos</a></li>
+                        <li><a href="#fazemos">Fazemos</a></li>
                         <li><a href="#">Clientes</a></li>
-                        <li><a href="#">Qualidade</a></li>
-                        <li><a href="#">Contato</a></li>
+                        <li><a href="#qualidade">Qualidade</a></li>
+                        <li><a href="#contato">Contato</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container -->
@@ -54,7 +54,7 @@
             </div><!-- /.content -->
         </header><!-- /.cover -->
 
-        <div class="our-history">
+        <div id="quemSomos" class="our-history">
             <div class="container">
                 <div class="row">
                     <div class="content col-sm-12 col-md-6">
@@ -70,7 +70,7 @@
             </div><!-- /.container -->
         </div><!-- /.history -->
 
-        <div class="mission-vision-values">
+        <div id="fazemos" class="mission-vision-values">
             <div class="container">
                 <header class="row">
                     <div class="col-sm-12">
@@ -159,7 +159,7 @@
             </div><!-- /.container -->
         </div><!-- /.services -->
 
-        <div class="quality-control">
+        <div id="qualidade" class="quality-control">
             <div class="container">
                 <div class="row">
                     <div class="content col-sm-12 col-md-6">
@@ -184,7 +184,7 @@
         <div id="location-map"></div>
         <!-- /#location-map -->
 
-        <div class="contact">
+        <div id="contato" class="contact">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
